--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <header>
-    <h1> Welcome to the site!</h1>
-  </header>
+  <body>
+    <header>
+      <h1> Welcome to the site!</h1>
+    </header>
+  </body>
 </html>
